--- a/style.css
+++ b/style.css
@@ -72,11 +72,12 @@ a {
     text-decoration: none;
     color: #1364BC;
     display: flex;
-    justify-content: center;
+    text-align: center;
 }
 /*selector de clase*/
 .picture {
-    width: 20%;
+    width: 80%;
+    height: 80%;
     margin: 20px;
     text-decoration: none;
     background-color: black;
@@ -84,6 +85,17 @@ a {
     justify-content: flex-start;
     border-radius: 999px;
 }
+
+  figure {
+  color: white;
+  border: thin #c0c0c0 solid;
+  display: flex;
+  flex-flow: column;
+  padding: 5px;
+  max-width: 220px;
+  margin: auto;
+}
+
 
 #name {
     font-size: 60px;
@@ -125,6 +137,7 @@ h3 {
   margin: 20px;
 }
 li {
+  color: black;  
   display: flex;
   justify-content: flex-start;
   padding-inline-start: 20px;
@@ -155,8 +168,7 @@ li {
 p {
   width: 100px;
   height: 60px;
-  display: flex;
-  justify-content: center;
+  text-align: center;
  
   
 }
